--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,74 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 6.2.0-M1 (2021-07-16)
+----------------------------------------
+* #2333 - Make API Guardian an optional / provided dependency.
+* #2332 - Upgrade to Cypher-DSL 2021.3.0.
+* #2331 - Upgrade to Neo4j 4.3.2.
+* #2329 - Upgrade to Neo4j-Java-Driver 4.3.3.
+* #2328 - Create tests for named queries in a non-default location.
+* #2327 - Adapt to deprecations in reactive Kotlin-Coroutines >= 1.5.
+* #2326 - `saveAll` use the lowest common denominator for determining the entity type to be saved.
+* #2325 - Support for SpEL pointing to related entities in projection on first level.
+* #2324 - Improve handling of 0-valued `IsoDuration`.
+* #2323 - Support entities annotated with `@RelationshipProperties` as top level parameters to custom procedures.
+* #2319 - Mapping performance optimization.
+* #2318 - Bug in connecting objects.
+* #2317 - Detection of cycles too defensive.
+* #2313 - Multi-level projection support.
+* #2311 - Include `DiscoveryException` in retry predicate.
+* #2305 - Add association support for DTO projections.
+* #2301 - Passing empty collections to derived finder methods lead to a `NullPointerException`.
+* #2298 - Upgrade to Neo4j-Java-Driver 4.2.7.
+* #2297 - Upgrade to Cypher-DSL 2021.2.2.
+* #2296 - Ids need to be potentially converted before dynamic labels are determined.
+* #2295 - Ensure same order of operations in both `Neo4jTemplate` and `ReactiveNeo4jTemplate`.
+* #2294 - Support `@ReadOnlyProperty`.
+* #2292 - Support collections of entities as parameters to custom repository queries.
+* #2290 - Ambiguous relationship definition during mapping.
+* #2289 - Persistence logic bails out on the wrong combination of source and relationship.
+* #2287 - Upgrade to CypherDSL 2021.2.3 and adapt Collection-API.
+* #2285 - Unwrap invocation target exceptions in the `AutoCloseableQueryRunner`.
+* #2281 - Support derived deleteBy methods.
+* #2280 - Allow custom composite converters to delete decomposed properties.
+* #2279 - Provide a SpEL-Expression to refer to the root entity in string based queries.
+* #2277 - Don't log warnings on literal `null` parameters.
+* #2276 - Support default, primitive Kotlin attributes.
+* #2275 - Upgrade to API Guardian 1.1.1.
+* #2274 - Honor `ignoreCase()` from `Sort.Order`.
+* #2273 - Allow function calls in Sort / Pageable objects in custom queries.
+* #2270 - Support `findAs` DTO based projection.
+* #2269 - Allow simple return pattern for single results.
+* #2267 - Clean up deprecation warnings.
+* #2262 - Fetch all properties when querying via a base interface.
+* #2261 - `Neo4jQueryMethod` checks whether a method belongs to a CypherDSL statement executor or not are to weak.
+* #2259 - Explicitly acquire locks on nodes when `@Version` is used.
+* #2254 - Document BeforeBindCallbacks.
+* #2252 - Allow seeding and retrieval of Neo4j bookmarks from the transaction managers.
+* #2251 - Upgrade to Neo4j-Java-Driver 4.2.5..
+* #2249 - Upgrade to Cypher-DSL 2021.2.1.
+* #2248 - Don't swallow or delete cause of translated exceptions.
+* #2246 - Deterministic mapping of records with mixed results.
+* #2245 - Provide additional scripts to run tests with retries against clusters.
+* #2244 - Fix detection of common element types in collections of persistent entities.
+* #2243 - Add support for missing DISTINCT keyword.
+* #2241 - Create empty collections instead of null.
+* #2240 - Unable to convert java.util.UUID to Neo4j Value.
+* #2239 - Resolve or remove literal replacements in custom count queries.
+* #2236 - Create correct collection type for RelationshipProperties.
+* #2234 - DatabaseSelection is not allways used.
+* #2230 - Use Cypher-DSL statement parameters in all template methods.
+* #2228 - Support multiple relationships properties to same node.
+* #2223 - Generated objects onSave are not considered as already processed.
+* #2216 - Allow inheritance of concrete classes.
+* #2210 - Improve documentation for hydrating collections based on queries returning paths.
+* #2192 - Update CI to Java 16.
+* #2019 - Add documentation for using health indicators without access to the default database.
+* #1985 - Make sure derived queries on the same property of the same entity but different relationships use multiple matches.
+* #1907 - Would be nice to have @OrderBy on collection relationships [DATAGRAPH-1345].
+
+
 Changes in version 6.0.11 (2021-07-16)
 --------------------------------------
 * #2328 - Create tests for named queries in a non-default location.
@@ -2301,6 +2369,7 @@ General
 * Support for building traversal descriptions
 * Support for cross-store persistence including basic transaction support
 * Abstract configuration class
+
 
 
 
