--- a/README.adoc
+++ b/README.adoc
@@ -10,7 +10,7 @@ image:https://spring.io/badges/spring-data-neo4j/ga.svg[Spring Data Neo4j,link=h
 :artifactIdStarter: spring-boot-starter-data-neo4j
 
 :neo4j-version: 4.1.5
-:spring-boot-version: 2.4.1
+:spring-boot-version: 2.5.3
 :spring-data-neo4j-version: 6.1.3
 // end::properties[]
 
@@ -46,7 +46,7 @@ If you are on https://spring.io/projects/spring-boot[Spring Boot], all you have 
 [source,xml,subs="verbatim,attributes"]
 ----
 <dependency>
-	<groupId>{neo4jGroupId}</groupId>
+	<groupId>{groupIdStarter}</groupId>
 	<artifactId>{artifactIdStarter}</artifactId>
 </dependency>
 ----
